--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "user-app",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -11,10 +11,18 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/db": "*",
+    "@repo/store": "*",
     "@repo/ui": "*",
+    "@tailwindcss/postcss": "^4.1.13",
+    "argon2": "^0.44.0",
     "next": "^15.5.0",
+    "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
