--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@1.22.22",
+  "packageManager": "yarn@4.9.4",
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "jotai": "^2.14.0"
+  }
 }
