--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
+    "./styles.css": "./styles.css",
     "./*": "./src/*.tsx"
   },
   "scripts": {
