--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/db": "*",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
