--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,9 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.15.0"
+    "@prisma/client": "^6.15.0",
+    "prisma": "^6.16.3"
   },
   "exports": {
-    "./client": "./src/index.ts"
+    "./client": "./src/index.ts",
+    "./prisma": "./generated/prisma/index.js"
   }
 }
