--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,10 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**", "build/**"]
+    },
+    "user-app:build": {
+      "env": ["NEXTAUTH_SECRET"]
     },
     "lint": {
       "dependsOn": ["^lint"]
