--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      
+          
+      - name: Enable Corepack + Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.4 --activate
+
       - name: Install dependencies
         run: yarn install
 
