--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,7 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.3",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
     "prisma": "^6.16.3"
   },
   "exports": {
